# AdvancedVectorSearch

./: .gitignore  CMakeLists.txt  FAISS_research.pptx  README.md  requirements.txt  run_ci.sh  setup.py
.github/workflows/: ci.yml  setup.yml
benchmarks/: BIGANN_downloader.py  BIGANN_run_benchmarks.py  plot.py  run_benchmarks.py
include/: base_search.h  knn_search.h  linear_search.h
src/: advanced_search.cpp  advanced_search.h  advanced_search_module.cpp  base_search.cpp  data_generator.py  knn_search.cpp  linear_search.cpp  module.cpp  search.py  setup.py
tests/: CMakeLists.txt  base_search_test.cpp  coverage_report.py  knn_search_test.cpp  linear_search_test.cpp  test_search.py
